--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,10 @@ android {
         }
     }
 
+    // Enables data binding.
+    dataBinding {
+        enabled = true
+    }
 }
 
 dependencies {
