Updated NewsFeedListItem UI, DataBinding with News Model, Added Glide lib for Lazy Image Loading.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,10 @@ android {
         }
     }
 
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+
     // Enables data binding.
     dataBinding {
         enabled = true
