--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,4 +78,7 @@ dependencies {
 
     // Glide
     implementation "com.github.bumptech.glide:glide:4.8.0"
+
+    // Timber to Log
+    implementation 'com.jakewharton.timber:timber:4.7.1'
 }
