--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,8 +54,9 @@ dependencies {
 
     // Room and Lifecycle dependencies
     implementation "androidx.room:room-runtime:2.2.5"
-    kapt "androidx.room:room-compiler:$version_room"
+    kapt "androidx.room:room-compiler:2.2.5"
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
+    implementation "androidx.room:room-ktx:2.2.5"
 
     // Coroutines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$version_coroutine"
@@ -66,8 +67,16 @@ dependencies {
     implementation "android.arch.navigation:navigation-fragment-ktx:$version_navigation"
     implementation "android.arch.navigation:navigation-ui-ktx:$version_navigation"
 
-    // Testing
+    // Unit Testing
     testImplementation 'junit:junit:4.12'
+    testImplementation "androidx.test:core-ktx:1.2.0"
+    testImplementation "org.robolectric:robolectric:4.3.1"
+    testImplementation "androidx.test.ext:junit-ktx:1.1.1"
+    testImplementation "org.hamcrest:hamcrest-all:1.3"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.2.2"
+    testImplementation 'org.mockito:mockito-core:1.10.19'
+
+    // UI Testing
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
