--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,17 +68,24 @@ dependencies {
     implementation "android.arch.navigation:navigation-ui-ktx:$version_navigation"
 
     // Unit Testing
-    testImplementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.13'
     testImplementation "androidx.test:core-ktx:1.2.0"
     testImplementation "org.robolectric:robolectric:4.3.1"
     testImplementation "androidx.test.ext:junit-ktx:1.1.1"
     testImplementation "org.hamcrest:hamcrest-all:1.3"
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.2.2"
-    testImplementation 'org.mockito:mockito-core:1.10.19'
+    testImplementation 'org.mockito:mockito-core:2.19.0'
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
 
     // UI Testing
+    androidTestImplementation "junit:junit:4.13"
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
+    androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.2.2"
+    androidTestImplementation "org.mockito:mockito-core:2.19.0"
+    androidTestImplementation "com.linkedin.dexmaker:dexmaker-mockito:2.12.1"
+    androidTestImplementation "androidx.test.espresso:espresso-contrib:3.3.0-beta02"
 
     // Webservice
     implementation 'com.squareup.retrofit2:retrofit:2.8.1'
@@ -90,4 +97,10 @@ dependencies {
 
     // Timber to Log
     implementation 'com.jakewharton.timber:timber:4.7.1'
+
+    // debugImplementation because LeakCanary should only run in debug builds.
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.3'
+
+    debugImplementation "androidx.fragment:fragment-testing:1.3.0-alpha05"
+    implementation "androidx.test:core:1.2.0"
 }
