--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,8 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 apply plugin: "androidx.navigation.safeargs"
+apply plugin: "jacoco"
+apply plugin: "com.vanniktech.android.junit.jacoco"
 
 android {
     compileSdkVersion 29
@@ -22,6 +24,10 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+
+        debug {
+            testCoverageEnabled true
         }
     }
 
@@ -50,7 +56,7 @@ dependencies {
     implementation "androidx.recyclerview:recyclerview:1.1.0"
 
     // Android KTX
-    implementation "androidx.core:core-ktx:1.2.0"
+    implementation "androidx.core:core-ktx:1.3.0"
 
     // Room and Lifecycle dependencies
     implementation "androidx.room:room-runtime:2.2.5"
@@ -85,7 +91,7 @@ dependencies {
     androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.2.2"
     androidTestImplementation "org.mockito:mockito-core:2.19.0"
     androidTestImplementation "com.linkedin.dexmaker:dexmaker-mockito:2.12.1"
-    androidTestImplementation "androidx.test.espresso:espresso-contrib:3.3.0-beta02"
+    androidTestImplementation "androidx.test.espresso:espresso-contrib:3.3.0-rc01"
 
     // Webservice
     implementation 'com.squareup.retrofit2:retrofit:2.8.1'
