--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ buildscript {
 
     ext
     {
-        kotlin_version = '1.3.71'
+        kotlin_version = '1.3.72'
         version_core = "1.0.1"
         version_coroutine = "1.1.0"
         version_constraint_layout = "1.1.3"
@@ -21,9 +21,10 @@ buildscript {
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.3'
+        classpath 'com.android.tools.build:gradle:4.0.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "android.arch.navigation:navigation-safe-args-gradle-plugin:$version_navigation"
+        classpath 'com.vanniktech:gradle-android-junit-jacoco-plugin:0.3.0'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
