--- a/build.gradle
+++ b/build.gradle
@@ -13,18 +13,19 @@ buildscript {
         version_lifecycle_extensions = "2.0.0"
         version_navigation = '1.0.0-beta02'
         version_room = "2.0.0"
+        koin_version = "2.1.5"
     }
 
     repositories {
         google()
         jcenter()
-        
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:4.0.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "android.arch.navigation:navigation-safe-args-gradle-plugin:$version_navigation"
         classpath 'com.vanniktech:gradle-android-junit-jacoco-plugin:0.3.0'
+        classpath "org.koin:koin-gradle-plugin:$koin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
